apply plugin: 'eclipse'
apply plugin: 'java'
apply plugin: 'application'


System.setProperty('file.encoding', 'UTF-8')

mainClassName = 'minesweeper.gui.Main'

compileJava.options.encoding = 'ISO-8859-1'

sourceCompatibility = 21
targetCompatibility = 21

repositories {
	mavenLocal()
	mavenCentral()
}

dependencies {
	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
	annotationProcessor 'org.projectlombok:lombok:1.18.32'

	implementation 'com.jhlabs:filters:2.0.235-1'
	implementation 'org.apache.sanselan:sanselan:0.97-incubator'
	implementation 'org.slf4j:slf4j-api:1.7.32'
}

// Replace start script
def copyAndReplaceText(source, Closure replaceText){
    source.write(replaceText(source.text))
}

tasks.register("executable") {
	doLast {
		def source = new File(project.getProjectDir().getAbsolutePath() + '/build/install/Minesweeper/bin/Minesweeper.bat')


		copyAndReplaceText(source) {
			def tmp = it
			tmp = tmp.replaceAll("set JAVA_EXE=%JAVA_HOME%/bin/java.exe", "set JAVA_EXE=%JAVA_HOME%/bin/javaw.exe")
			tmp = tmp.replaceAll('"%JAVA_EXE%" %DEFAULT_JVM_OPTS%', 'start %JAVA_EXE% %DEFAULT_JVM_OPTS%')

			return tmp
		}

		// Build a zip
		new groovy.util.AntBuilder().zip(destFile: project.getProjectDir().getAbsolutePath() + "/build/install/Minesweeper.zip") {
			fileset(dir: project.getProjectDir().getAbsolutePath() + '/build/install/Minesweeper')
		}
	}
}

tasks.executable { dependsOn(installDist) }
